recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:4: error: not found: value int
    if(int(angle)){
       ^Tree:12: error: value and is not a member of Boolean
  else if (steps==0 and angle ==int)
                    ^Tree:12: error: not found: value int
  else if (steps==0 and angle ==int)
                                ^