recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  if (steps!=0  ) {
    if(int(angle)){
    current(steps)
    avance(length*shrink:Double)
    droite(angle:Double)
      return tree(steps-1,length*shrink,angle,shrink)}
    else(
    )
  }
  else if (steps==0 and angle ==int)
  {gauche(angle:Double)
    recule(length/shrink:Double)
     }
  
  
  
}
